TEST_PROGRAMS/INVALID/04/71.go
package main

func main() {
    // Non lvalue in assignment
    6.nothing++
}
